objects/ProfileID__c.object
<CustomObject>
    <fields>
        <fullName>Cisco_ADMIN__c</fullName>
        <description>This field stores the id of the Cisco ADMIN Profile</description>
        <label>Cisco ADMIN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_APAC_Eng__c</fullName>
        <description>This field stores the id of the Cisco APAC Eng profile</description>
        <label>Cisco_APAC_Eng</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_APAC_NonEng__c</fullName>
        <description>This field stores the id of the Cisco APAC NonEng Profile</description>
        <label>Cisco_APAC_NonEng</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Americas_LATAM__c</fullName>
        <description>This field stores the id of the Cisco Americas LATAM profile</description>
        <label>Cisco_Americas_LATAM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Canada__c</fullName>
        <description>This field stores the id of the Cisco Canada Profile</description>
        <label>Cisco_Canada</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Custom__c</fullName>
        <description>This field stores the id of the Cisco Custom Profile</description>
        <label>Cisco_Custom</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_CustomerSuccess__c</fullName>
        <description>Cisco_CustomerSuccess</description>
        <label>Cisco_CustomerSuccess</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Dashboard_Admin__c</fullName>
        <description>This field stores the id of the Cisco Dashboard Admin Profile</description>
        <label>Cisco_Dashboard_Admin</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Data_Migration__c</fullName>
        <description>This field stores the id of the Cisco Data Migration</description>
        <label>Cisco_Data_Migration</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Deployment_Support__c</fullName>
        <description>This field stores the id of the Cisco Deployment Support</description>
        <label>Cisco_Deployment_Support</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_EMEAR_Eng_LX__c</fullName>
        <defaultValue>"00e340000015SFD"</defaultValue>
        <description>Cisco_EMEAR_Eng_LX</description>
        <label>Cisco_EMEAR_Eng_LX</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_EMEAR_Eng__c</fullName>
        <description>This field stores the id of the Cisco EMEAR Eng Profile</description>
        <label>Cisco_EMEAR_Eng</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_EMEAR_NonEng__c</fullName>
        <description>This field stores the id of the Cisco EMEAR NonEng Profile</description>
        <label>Cisco_EMEAR_NonEng</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_GSTS_Analyst__c</fullName>
        <description>This field stores the id of the Cisco GSTS Analyst Profile</description>
        <label>Cisco_GSTS_Analyst</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_GSTS__c</fullName>
        <description>This field stores the id of the Cisco GSTS Profile</description>
        <label>Cisco_GSTS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Global_Enterprise_Segment__c</fullName>
        <description>This field stores the id of the Cisco US Enterprise Profile.Renamed from Cisco_US_Enterprise__c to Cisco_Global_Enterprise_Segment</description>
        <label>Cisco_Global_Enterprise_Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Global_Enterprise__c</fullName>
        <description>This field stores the id of the Cisco Global Enterprise Profile.Label changed from Cisco_Global_Enterprise to zzCisco_Global_Enterprise</description>
        <label>zzCisco_Global_Enterprise</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Greater_China_Eng__c</fullName>
        <description>This field stores the id of the Cisco Greater China Eng Profile</description>
        <label>Cisco_Greater_China_Eng</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Greater_China_NonEng__c</fullName>
        <description>This field stores the id of the Cisco Greater China NonEng Profile</description>
        <label>Cisco_Greater_China_NonEng</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Integration_Echo_Suppression__c</fullName>
        <description>This field stores the id of the Cisco Integration Echo Suppression Profile</description>
        <label>Cisco_Integration_Echo_Suppression</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Japan__c</fullName>
        <description>This field stores the id of the Cisco Japan Profile</description>
        <label>Cisco_Japan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Lead_Admin__c</fullName>
        <description>This field stores the id of the Cisco Lead Admin Profile</description>
        <label>Cisco_Lead_Admin</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_NGCC__c</fullName>
        <label>Cisco_NGCC</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_PSS__c</fullName>
        <description>This field stores the id of the Cisco PSS Profile</description>
        <label>Cisco_PSS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Read_Only_Gomez__c</fullName>
        <description>This field stores the id of the Cisco Read Only Gomez</description>
        <label>Cisco_Read_Only_Gomez</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Read_Only_Restricted__c</fullName>
        <description>This field stores the id of the Cisco Read Only Restricted Profile</description>
        <label>Cisco_Read_Only_Restricted</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Renewals__c</fullName>
        <defaultValue>'00e34000001CQnp'</defaultValue>
        <description>00e34000001CQnp</description>
        <inlineHelpText>00e34000001CQnp</inlineHelpText>
        <label>Cisco_Renewals</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Sales_Cases__c</fullName>
        <description>Cisco_Sales_Cases</description>
        <label>Cisco_Sales_Cases</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Sales_PSS_Pilot__c</fullName>
        <label>Cisco_Sales_PSS_Pilot</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Sales__c</fullName>
        <defaultValue>'00e340000015SW4'</defaultValue>
        <description>Cisco_Sales</description>
        <label>Cisco_Sales</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_TSN__c</fullName>
        <description>This field stores the id of the Cisco TSN</description>
        <label>Cisco_TSN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_USC_LX__c</fullName>
        <defaultValue>"00e34000001GC8e"</defaultValue>
        <description>Cisco_US_Commercial_LX</description>
        <label>Cisco_USC_LX</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_US_Commercial__c</fullName>
        <description>This field stores the id of the Cisco US Commercial Profile</description>
        <label>Cisco_US_Commercial</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_US_Public_Sector__c</fullName>
        <description>This field stores the id of the Cisco US Public Sector</description>
        <label>Cisco_US_Public_Sector</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_US_Service_Provider__c</fullName>
        <description>This field stores the id of the Cisco US Service Provider Profile</description>
        <label>Cisco_US_Service_Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Worldwide_Read_Only__c</fullName>
        <description>This field stores the id of the Cisco Read Only ALL Profile</description>
        <label>Cisco_Worldwide_Read_Only</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLOC_Cisco_Partner_Profile__c</fullName>
        <description>This field stores the id of the PLOC Cisco Partner Profile</description>
        <label>PLOC_Cisco_Partner_Profile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLOC_Cisco_Partner_Profile_old__c</fullName>
        <description>This field stores the id of the PLOC CIsco Partner Profile (old) Profile</description>
        <label>PLOC_Cisco_Partner_Profile(old)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner360_Portal_Profile__c</fullName>
        <label>Partner360_Portal_Profile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzINACTIVE_USERS__c</fullName>
        <description>This field stores the id of the zzINACTIVE USERS Profile</description>
        <label>zzINACTIVE USERS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is used to store the profile ids for all the available profiles.</description>
    <label>Profile ID</label>
</CustomObject>